# Python-Projects

./: muet-class.ipynb
100-or-greater/: main.py
QR code-Generator/: QRcode.py  class1.py
guess-num/: num-guessing.py
high-low-game/: high-low-game.py  python_with_ai.ipynb
joke-bot/: joke.py
lift-off/: lift-off.py
muet.class/: C1_sensor_bug.py  C2_numpy_stats.py  C3_grades.py  C4_ethics.py  C5_dashboard.py  Titanic-Important-Cols.csv  Titanic-Survivors-Only.csv  VibeCoding-mission-assignment-submission.ipynb  VibeCoding_Submission.ipynb  age_calculator.py  clean-data.py  data_analysis.py  grades.py  grades.txt  list_files.py  main.py  math_helpers.py  muet-class.ipynb  numpy_task.py  pandas.py  quiz.py  students.csv  titanic-task.py  vibe-coding.py
password-generator/: password-generator.py
personal_library/: books_data.json  main.py
piaic/: class-1.py  class-2.ipynb
piaic-card/: card.py
planetary-weight-calculator/: p-w-cal.py
project2/: pyproject.toml
project2/src/project2/: main.py
project3/: .env  pyproject.toml
project3/src/project3/: hello.py
python-practice/: class1.py  dictionary&set.py  functions.py  lists&tuples.py  lists.py  loops.py  oops.py  questions.py  variables&datatypes.py
quiz-app/: main.py
random-num/: random-num.py
simple-api/: main.py
time-zone-app/: main.py
unit-converter/: unit_converter.py
