[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aqsashah", email = "aqsanor665@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
piaic = "project2:main"
karachi = "project2.main:myfunction"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
